--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>League Matchmaking</title>
+    <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/2/2a/LoL_icon.svg">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <script defer src="index.js"></script>
-    <h1>title</h1>
+    <script defer src="script.js"></script>
+    <h1 id="title">title</h1>
     <h1 id="content"></h1>
 </body>
 </html>
