fix error handling

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,10 @@
 <body>
     <script defer src="script.js"></script>
     <h1 id="title">title</h1>
+    <div id="codeSection">
+        <button id="codeButton" onclick="displayCode()">Get Code</button>
+        <div>Code: <span id="codeDisplay"></span></div>
+    </div>
     <h1 id="content"></h1>
 </body>
 </html>
