--- a/public/index.html
+++ b/public/index.html
@@ -67,15 +67,15 @@
         <br>
         <div id="config-closedLobby">
             <label for="config-closedLobby">Closed lobby:</label>
-            <input type="radio" id="config-closedLobbyChoiceYes" name="config-closedLobby" value="yes" checked />
+            <input type="radio" id="config-closedLobbyChoiceYes" name="config-closedLobby" value="yes" onclick="showRows()" checked />
             <label for="config-closedLobbyChoiceYes">Yes</label>
-            <input type="radio" id="config-closedLobbyChoiceNo" name="config-closedLobby" value="no" />
+            <input type="radio" id="config-closedLobbyChoiceNo" name="config-closedLobby" value="no" onclick="hideRows()" />
             <label for="config-closedLobbyChoiceNo">No</label>
         </div>
-        <div id="config-allowedNames">
+        <div id="config-allowedPlayers">
             Allowed players:
-            <div id="config-allowedNames-rows">
-                <div id="config-allowedNames-row1" class="config-allowedNames-row">
+            <div id="config-allowedPlayers-rows">
+                <div id="config-allowedPlayers-row1" class="config-allowedPlayers-row">
                     <input type="text" class="player" name="player">
                     <input type="text" class="player" name="player"><br>
                 </div>
